--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flip Image App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 </head>
 <body>
-    <div class="image-container">
-        <img src="image.jpg" id="image">
+    <div class="container">
+        <div class="image-container">
+            <div class="top-row">
+                <button onclick="rotateImage('up')"><i class="fas fa-chevron-up"></i></button>
+            </div>
+            <div class="center-row">
+                <button onclick="rotateImage('left')"><i class="fas fa-chevron-left"></i></button>
+                <div class="image-box">
+                    <img src="image.jpg" id="image">
+                </div>
+                <button onclick="rotateImage('right')"><i class="fas fa-chevron-right"></i></button>
+            </div>
+            <div class="bottom-row">
+                <button onclick="rotateImage('down')"><i class="fas fa-chevron-down"></i></button>
+            </div>
+        </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
