--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <div class="container">
+        <div class="image-input">
+            <label for="image-url-input">Image URL</label>
+            <input type="url" name="image-url-input" placeholder="Image URL:" id="image-url-input">
+            <button id="new-image-button">Display</button>
+        </div>
         <div class="image-container">
             <div class="top-row">
                 <button onclick="rotateImage('up')"><i class="fas fa-chevron-up"></i></button>
